fixed container contrast and background

--- a/src/components/Movies/index.scss
+++ b/src/components/Movies/index.scss
@@ -1,5 +1,5 @@
 .movies-container {
-  background: url("../../assets/images/thumb-1920-204448.jpg") no-repeat;
+  background: url("../../assets/images/thumb-1920-669177.png") no-repeat;
   background-size: cover;
   background-position: right 23% bottom 75%;
   color: #fff;
@@ -12,12 +12,12 @@
 
   &::before {
     content: "";
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.3);
+    min-height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
   }
 
   & * {
@@ -46,10 +46,10 @@
   }
 }
 
-@supports (backdrop-filter: blur(0.75em)) {
-  .movie-card {
-    color: #fff;
-    background-color: hsla(0, 0%, 100%, 0.1);
-    backdrop-filter: blur(0.4rem) !important;
-  }
-}
+// @supports (backdrop-filter: blur(0.75em)) {
+//   .movie-card {
+//     color: #fff;
+//     background-color: hsla(0, 0%, 100%, 0.1);
+//     backdrop-filter: blur(0.4rem) !important;
+//   }
+// }
