--- a/src/components/Species/index.scss
+++ b/src/components/Species/index.scss
@@ -12,7 +12,7 @@
 
   &::before {
     content: "";
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
