--- a/src/components/Vehicles/index.scss
+++ b/src/components/Vehicles/index.scss
@@ -12,12 +12,12 @@
 
   &::before {
     content: "";
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.3);
+    background-color: rgba(0, 0, 0, 0.45);
   }
 
   & * {
